exports[`List #render() should return base class with mods for strings as class and string as mods 1`] = `
<ul
  className="ui-list ui-list_position_vertical">
  <li>
    <span
      className="ui-list__content">
      London
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Amsterdam
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Madrid
    </span>
  </li>
</ul>
`;

exports[`List #render() should return base class with mods for strings as class and string as mods 2`] = `
<ul
  className="ui-list ui-list_position_horizontal">
  <li>
    <span
      className="ui-list__content">
      London
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Amsterdam
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Madrid
    </span>
  </li>
</ul>
`;

exports[`List #render() should return base class with mods for strings as class and string as mods 3`] = `
<ul
  className="ui-list ui-list_position_vertical ui-list_no_bullets">
  <li>
    <span
      className="ui-list__content">
      London
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Amsterdam
    </span>
  </li>
  <li>
    <span
      className="ui-list__content">
      Madrid
    </span>
  </li>
</ul>
`;
